# c_taint_analyzer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/c_taint/: ASTConsumer.hh  Analyses.hh  CTaintASTConsumer.hh  FindSanitizersVisitor.hh  GrammarChecks.hh  UnparserASTConsumer.hh  Utils.hh  types.hh
lib/: ASTConsumer.cc  Analyses.cc  CMakeLists.txt  CTaintASTConsumer.cc  CTaintPluginASTAction.cc  FindSanitizersVisitor.cc  GrammarChecks.cc  PluginASTAction.cc  UnparserASTConsumer.cc  Utils.cc
test/: CMakeLists.txt  assgn_p_san.c  assgn_san.c  assgn_taint.c  assign.c  bin_expr.c  combool.c  complex_flow.c  decls.c  fix_flow_t.c  if.c  if_then_else.c  lit.cfg.py  lit.site.cfg.py.in  main_void.c  returns.c  san_only.c  sanitize_main.c  sanitizer.c  scanf_sanitize.c  skip.c  tainted.c  test_unparse.in  unsan.c  while.c
test/Tests/: assgn_p_san.c  assgn_san.c  assgn_taint.c  assign.c  bin_expr.c  combool.c  complex_flow.c  decls.c  fix_flow_t.c  if.c  if_then_else.c  returns.c  san_only.c  sanitize_main.c  scanf_sanitize.c  skip.c  tainted.c  unsan.c  while.c
test/UnparserTests/: assgn_p_san.c  assgn_san.c  assgn_taint.c  assign.c  bin_expr.c  combool.c  complex_flow.c  decls.c  fix_flow_t.c  if.c  if_then_else.c  returns.c  san_only.c  sanitize_main.c  scanf_sanitize.c  skip.c  tainted.c  unsan.c  while.c
